Media context endpoint + Tiny ui improvements on player
