# apps/front/src/api/model/mediaContextDataBase.ts
@@ -1,0 +1,12 @@
+/**
+ * Generated by otqs v1.0.0 🍺
+ * Do not edit manually.
+ * @beast/server
+ * OpenAPI spec version: 0.0.1
+ */
+import type { MediaContextDataBaseOneOf } from "./mediaContextDataBaseOneOf";
+import type { MediaContextDataBaseOneOfThree } from "./mediaContextDataBaseOneOfThree";
+
+export type MediaContextDataBase =
+  | MediaContextDataBaseOneOf
+  | MediaContextDataBaseOneOfThree;
