# apps/front/src/api/model/mediaWithContext.ts
@@ -1,0 +1,12 @@
+/**
+ * Generated by otqs v1.0.0 🍺
+ * Do not edit manually.
+ * @beast/server
+ * OpenAPI spec version: 0.0.1
+ */
+import type { MediaContextDataBase } from "./mediaContextDataBase";
+
+export interface MediaWithContext {
+  data: MediaContextDataBase;
+  mediaId: string;
+}
