# apps/server/src/media/media.controller.ts
@@ -2,7 +2,7 @@ import { Controller } from '@nestjs/common';
 import { ApiSecurity, ApiTags } from '@nestjs/swagger';
 import { MediaService } from './media.service';
 import { TypedQuery, TypedRoute } from '@nestia/core';
-import { QueryMedia } from './dto/media.queries';
+import { MediaWithContext, QueryMedia } from './dto/media.queries';
 import { Authenticated } from 'src/auth/auth.decorator';
 import { HasLibraryAccess } from 'src/library/library-access.decorator';
 import { Media, MediaWithStreams } from './dto/media.dto';
@@ -27,6 +27,21 @@ export class MediaController {
   })
   async getMedia(@TypedQuery() query: QueryMedia): Promise<Media> {
     return this.mediaService.getMedia(query.mediaId);
+  }
+
+  /**
+   * Get a media context information.
+   * Like Show or Movie related informations
+   */
+  @TypedRoute.Get('/context')
+  @HasLibraryAccess<QueryMedia>('READ', {
+    from: 'MEDIA',
+    id: 'mediaId',
+  })
+  async getMediaContext(
+    @TypedQuery() query: QueryMedia,
+  ): Promise<MediaWithContext> {
+    return this.mediaService.getMediaContext(query.mediaId);
   }
 
   /**
