# apps/server/src/swagger.json
@@ -148,6 +148,43 @@
         ]
       }
     },
+    "/api/media/context": {
+      "get": {
+        "tags": [
+          "media"
+        ],
+        "operationId": "getMediaContext",
+        "parameters": [
+          {
+            "name": "mediaId",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MediaWithContext"
+                }
+              }
+            }
+          }
+        },
+        "summary": "Get a media context information",
+        "description": "Get a media context information.\nLike Show or Movie related informations",
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
     "/api/media/detail": {
       "get": {
         "tags": [
@@ -959,6 +996,216 @@
           "duration"
         ]
       },
+      "MediaWithContext": {
+        "type": "object",
+        "properties": {
+          "mediaId": {
+            "type": "string"
+          },
+          "data": {
+            "$ref": "#/components/schemas/MediaContextDataBase"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "mediaId",
+          "data"
+        ]
+      },
+      "MediaContextDataBase": {
+        "oneOf": [
+          {
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "enum": [
+                  "TV_SHOWS"
+                ]
+              },
+              "show": {
+                "$ref": "#/components/schemas/Show"
+              },
+              "season": {
+                "$ref": "#/components/schemas/Season"
+              },
+              "episode": {
+                "$ref": "#/components/schemas/Episode"
+              }
+            },
+            "nullable": false,
+            "required": [
+              "type",
+              "show",
+              "season",
+              "episode"
+            ]
+          },
+          {
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "enum": [
+                  "MOVIES"
+                ]
+              },
+              "movie": {
+                "$ref": "#/components/schemas/Movie"
+              }
+            },
+            "nullable": false,
+            "required": [
+              "type",
+              "movie"
+            ]
+          }
+        ]
+      },
+      "Show": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "tvmazeId": {
+            "type": "number"
+          },
+          "name": {
+            "type": "string"
+          },
+          "path": {
+            "type": "string"
+          },
+          "overview": {
+            "type": "string",
+            "nullable": true
+          },
+          "images": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "libraryId": {
+            "type": "string"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "id",
+          "tvmazeId",
+          "name",
+          "path",
+          "overview",
+          "images",
+          "libraryId"
+        ]
+      },
+      "Season": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "season_number": {
+            "type": "number"
+          },
+          "overview": {
+            "type": "string",
+            "nullable": true
+          },
+          "images": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        },
+        "nullable": false,
+        "required": [
+          "id",
+          "name",
+          "season_number",
+          "overview",
+          "images"
+        ]
+      },
+      "Episode": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "episode_number": {
+            "type": "number"
+          },
+          "overview": {
+            "type": "string",
+            "nullable": true
+          },
+          "images": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "mediaId": {
+            "type": "string"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "id",
+          "name",
+          "episode_number",
+          "overview",
+          "images",
+          "mediaId"
+        ]
+      },
+      "Movie": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "overview": {
+            "type": "string",
+            "nullable": true
+          },
+          "tmdbId": {
+            "type": "number"
+          },
+          "images": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "mediaId": {
+            "type": "string"
+          }
+        },
+        "nullable": false,
+        "required": [
+          "id",
+          "name",
+          "overview",
+          "tmdbId",
+          "images",
+          "mediaId"
+        ]
+      },
       "MediaWithStreams": {
         "type": "object",
         "properties": {
@@ -1181,46 +1428,6 @@
           "data"
         ]
       },
-      "Show": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "tvmazeId": {
-            "type": "number"
-          },
-          "name": {
-            "type": "string"
-          },
-          "path": {
-            "type": "string"
-          },
-          "overview": {
-            "type": "string",
-            "nullable": true
-          },
-          "images": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "libraryId": {
-            "type": "string"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "id",
-          "tvmazeId",
-          "name",
-          "path",
-          "overview",
-          "images",
-          "libraryId"
-        ]
-      },
       "LibraryContentMovie": {
         "type": "object",
         "properties": {
@@ -1238,42 +1445,6 @@
         "required": [
           "type",
           "data"
-        ]
-      },
-      "Movie": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "overview": {
-            "type": "string",
-            "nullable": true
-          },
-          "tmdbId": {
-            "type": "number"
-          },
-          "images": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "mediaId": {
-            "type": "string"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "id",
-          "name",
-          "overview",
-          "tmdbId",
-          "images",
-          "mediaId"
         ]
       },
       "QueryFilesystem": {
@@ -1347,38 +1518,6 @@
           "seasons"
         ]
       },
-      "Season": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "season_number": {
-            "type": "number"
-          },
-          "overview": {
-            "type": "string",
-            "nullable": true
-          },
-          "images": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          }
-        },
-        "nullable": false,
-        "required": [
-          "id",
-          "name",
-          "season_number",
-          "overview",
-          "images"
-        ]
-      },
       "QuerySeason": {
         "type": "object",
         "properties": {
@@ -1428,42 +1567,6 @@
           "overview",
           "images",
           "episodes"
-        ]
-      },
-      "Episode": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "episode_number": {
-            "type": "number"
-          },
-          "overview": {
-            "type": "string",
-            "nullable": true
-          },
-          "images": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "mediaId": {
-            "type": "string"
-          }
-        },
-        "nullable": false,
-        "required": [
-          "id",
-          "name",
-          "episode_number",
-          "overview",
-          "images",
-          "mediaId"
         ]
       },
       "QueryEpisode": {
